# SVA-MASTERS-WORK

./: .gitattributes  .gitignore  MIMIC_CXR_VQA_ANALYSIS.md  README.md  SETUP_DATA.md  TRAINING_GUIDE.md  analyze_data.py  env.example  evaluate.py  mimic-cxr-jpg.md  mimic-ext-cxr-qba.md  pyproject.toml  setup_data.py  setup_gcp.sh  train_mimic_cxr.py
configs/: __init__.py  deepspeed_config.json  default_config.yaml  finetune_config.yaml  gcp_server_config.yaml  mimic_cxr_config.py  pretrain_config.yaml
configs/ablations/: __init__.py  ablation_configs.py
data/: __init__.py  external_datasets.py  mimic_cxr_dataset.py
docs/: EXTERNAL_DATASETS.md  METADATA_INTEGRATION.md  MULTI_GPU_TRAINING.md  architecture_diagram.md  methodology.md
examples/: README.md  __init__.py  inference_example.py
models/: __init__.py  mimic_vqa_model.py
scripts/: launch_distributed_training.sh  prebuild_cache.py  quick_start_gcp.sh  setup.sh  setup_gcp.sh  verify_pretrain_pipeline.py
tests/: __init__.py  test_model.py
training/: __init__.py  loss.py  metrics.py
utils/: __init__.py  explainability.py  hardware_utils.py  nlp_metrics.py  statistical_tests.py  utils.py
